Update action description to be more concise
Shortened the action description for clarity.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'OfferFetcher Action'
-description: 'Fetch offers from Kaspi marketplace using OfferFetcher API (with PAT authentication)'
+description: 'Fetch offers'
 author: 'kaspioffers'
 
 branding:
